--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,7 +19,7 @@ body{
   padding: 0;
 }
 /*Encabezado*/
-header{
+h1{
     background-color: var(--color-rojo);
     color: var(--color-blanco);
     padding: 20px;
@@ -33,8 +33,8 @@ header{
     justify-content: center;
     padding: 20px;
 }
-/*Cartas del producto*/
 
+/*Cartas del producto*/
 .producto{
     background-color: var(--color-blanco);
     border: 2px solid var(--color-marron);
@@ -49,12 +49,12 @@ header{
     transition: scale(1.05);
 }
 
-.producto img{
+/* .producto img{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     max-width: 100%;
     height: auto;
-}
+} */
 
 h2{
     color: var(--color-rojo);
